# inflyte-dj-monitor

./: .dockerignore  .env.example  .gitignore  AZURE_CONTAINER_DEPLOYMENT.md  AZURE_SETUP.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  MAILGUN_SETUP.md  README.md  inflyte-policy.json  setup-github-secrets.sh  urls.txt.example
.github/: CICD_QUICKREF.md
.github/scripts/: send-test-email.sh  update_readme.py
.github/workflows/: deploy.yml  test-email.yml  update-readme.yml  update-urls.yml
src/: main.rs
